Tidy up some collections code